--- a/styles/styles.css
+++ b/styles/styles.css
@@ -34,3 +34,14 @@
   -ms-transform: scale(0.5);
   -o-transform: scale(0.5);
 }
+
+@font-face {
+  font-family: 'LXGW WenKai'; /* 自定义字体名称 */
+  src: url('/styles/LXGWWenKai-Regular.woff2') format('woff2'), /* 指定字体路径和格式 */
+  font-weight: normal; /* 字体粗细，默认是normal */
+  font-style: normal; /* 字体样式，默认是normal */
+}
+
+body {
+  font-family: 'LXGW WenKai', serif; /* 使用自定义字体，如果未加载则使用serif作为备选 */
+}
